--- a/NoSQL_analysis_starter.ipynb
+++ b/NoSQL_analysis_starter.ipynb
@@ -59,6 +59,7 @@
    "source": [
     "# review the collections in our database\n"
    ]
+collections = db.list_collection_names()
   },
   {
    "cell_type": "code",
@@ -70,7 +71,25 @@
     "# assign the collection to a variable\n",
     "establishments = db['establishments']"
    ]
+query = {
+    "BusinessType": "Restaurant/Cafe/Canteen"
+}
   },
+projection = {
+    "BusinessTypeID": 1,
+    "BusinessType": 1,
+    "_id": 0
+}
+query = {"BusinessType": "Restaurant/Cafe/Canteen"}
+projection = {"BusinessTypeID":  1, "_id":0}
+
+business_type_id_doc = establishments.find_one(query, projection)
+if business_type_id_doc:
+    business_type_id = business_type_id_doc['BusinessTypeID']
+    print(f"BusinessTypeID for 'Restaurant/Cafe/Canteen': {business_type_id}")
+else:
+    print("BusinessTypeID for 'Restaurant/Cafe/Canteen' not found.")
+    business_type_id = None
   {
    "cell_type": "markdown",
    "id": "d5671434",
@@ -90,6 +109,21 @@
    "source": [
     "### 1. Which establishments have a hygiene score equal to 20?"
    ]
+from pprint import pprint  # Importing pprint for pretty printing
+
+# Find the establishments with a hygiene score of 20
+query = {"hygiene": 20}
+
+# Use count_documents to display the number of documents in the result
+count = establishments_collection.count_documents(query)
+print("Number of establishments with a hygiene score of 20:", count)
+
+# Find and print the first document in the results
+first_document = establishments_collection.find_one(query)
+if first_document:
+    pprint(first_document)
+else:
+    print("No document found with a hygiene score of 20")
   },
   {
    "cell_type": "code",
@@ -114,6 +148,20 @@
    "outputs": [],
    "source": [
     "# Convert the result to a Pandas DataFrame\n",
+if first_document:
+    df = pd.DataFrame.from_dict(first_document, orient='index').T
+    print("DataFrame from MongoDB document:")
+    print(df)
+
+    # Display the number of rows in the DataFrame
+    num_rows = df.shape[0]
+    print(f"Number of rows in DataFrame: {num_rows}")
+
+    # Display the first 10 rows of the DataFrame
+    print("First 10 rows of the DataFrame:")
+    print(df.head(10))
+else:
+    print("No document found with a hygiene score of 20")
     "\n",
     "# Display the number of rows in the DataFrame\n",
     "\n",
@@ -128,6 +176,19 @@
     "### 2. Which establishments in London have a `RatingValue` greater than or equal to 4?"
    ]
   },
+query = query = {'LocalAuthorityName': {'$regex':'London'}, 'RatingValue': {'$gte': 4}}
+
+# Use count_documents to display the number of documents in the result
+num_documents = establishments_collection.count_documents(query)
+print(f"Number of establishments in London with RatingValue >= 4: {num_documents}")
+
+# Display the first document in the results using pprint
+first_document = establishments_collection.find_one(query)
+if first_document:
+    print("First document in the results:")
+    pprint(first_document)
+else:
+    print("No document found with the given criteria")
   {
    "cell_type": "code",
    "execution_count": null,
@@ -151,6 +212,15 @@
    "outputs": [],
    "source": [
     "# Convert the result to a Pandas DataFrame\n",
+df = pd.DataFrame([first_document])
+
+# Display the number of rows in the DataFrame
+num_rows = df.shape[0]
+print(f"Number of rows in the DataFrame: {num_rows}")
+
+# Display the first 10 rows of the DataFrame
+print("First 10 rows of the DataFrame:")
+print(df.head(10))
     "\n",
     "# Display the number of rows in the DataFrame\n",
     "\n",
@@ -166,6 +236,22 @@
     "### 3. What are the top 5 establishments with a `RatingValue` rating value of 5, sorted by lowest hygiene score, nearest to the new restaurant added, \"Penang Flavours\"?"
    ]
   },
+# Search within 0.01 degree on either side of the latitude and longitude.
+# Rating value must equal 5
+# Sort by hygiene score
+
+degree_search = 0.01
+latitude = 51.5074
+longitude = -0.1278
+
+query = {'geocode.latitude': {'$gte':latitude-degree_search, '$lte':latitude+degree_search},
+         'geocode.longitude': {'$gte': longitude-degree_search, '$lte': longitude+degree_search},
+         'RatingValue': 5}
+sort = [('scores.Hygiene', 1)]
+limit = 5
+
+# Print the results
+pprint(list(establishments.find(query).sort(sort).limit(limit)))
   {
    "cell_type": "code",
    "execution_count": null,
@@ -198,6 +284,8 @@
     "# Convert result to Pandas DataFrame\n"
    ]
   },
+print("DataFrame from MongoDB query results:")
+print(df)
   {
    "cell_type": "markdown",
    "id": "67281254",
@@ -206,7 +294,62 @@
     "### 4. How many establishments in each Local Authority area have a hygiene score of 0?"
    ]
   },
-  {
+# Define the aggregation pipeline
+pipeline = [
+    {
+        '$match': {
+            'scores.Hygiene': 0
+        }
+    },
+    {
+        '$group': {
+            '_id': '$LocalAuthorityName',
+            'count': {'$sum': 1}
+        }
+    },
+    {
+        '$sort': {
+            'count': -1
+        }
+    }
+]
+# Execute the pipeline
+results = list(establishments.aggregate(pipeline))
+# Print the number of documents in the result
+num_results = len(results)
+print(f"Number of documents in the result: {num_results}")
+# Print the first 10 results
+for result in results[:10]:
+    print(result)
+# Correct the query for counting documents
+query = {'scores.Hygiene': 0}
+# Print the number of documents that match the query
+num_documents = establishments.count_documents(query)
+print(f"Number of documents with a hygiene score of 0: {num_documents}")
+# Retrieve and print the first result of the query
+results = list(establishments.find(query))
+if results:
+    print("First result:")
+    print(results[0])
+else:
+    print("No results found.")
+
+print(db.list_collection_names())
+# Convert the result to a Pandas DataFrame
+df = pd.DataFrame(results)
+print("DataFrame from MongoDB from query results:")
+print(df)
+
+# Display the number of rows in the DataFrame
+num_rows = df.shape[0]
+print(f"Number of rows in DataFrame: {num_rows}")
+
+# Display the first 10 rows of the DataFrame
+print("First 10 rows of the DataFrame: ")    
+print(df.head(10))
+print("No results found.")
+  
+{
    "cell_type": "code",
    "execution_count": null,
    "id": "4eeb227e",
